# sgx-dcap-quote-verify-python

./: .appveyor.yml  .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  build_qvl.sh  conanfile.txt  pyproject.toml  setup.py
.github/workflows/: test.yml  wheels.yml
cmake_example/: __init__.py  _core_wrapper.py
sgx_dcap_quote_verify/: __init__.py  _core.pyi
src/: main.cpp  main.h
tests/: test_basic.py
